# camltac

./: .gitignore  README.md  _RocqProject  camltac-directives.opam  camltac-examples.opam  camltac-examples.opam.template  camltac-tests.opam  camltac.opam  camltac.opam.template  dune  dune-project
.github/: dune-workspace.ci
.github/workflows/: ci.yml  examples.yml
examples/: .gitignore  HashconsedReification.v  HintDatabases.v  IdentParsing.v  ParallelTactics.v  Reification.v  StdppMapReification.v  TacticSuggestion.v  Tour.v  Tracing.v  dune  file.ml
examples/HashconsedReification/: .merlin  Makefile  Makefile.rocq  Makefile.rocq.conf  Makefile.rocq.local  _RocqProject
examples/HashconsedReification/src/: HashconsedReification_plugin.mlpack  META.HashconsedReification  dune  grammar.ml  grammar.mlg  main.ml
examples/HashconsedReification/theories/: Demo.v  IdentParsing.v  Loader.v
examples/TacticSuggestion/: .gitignore  _RocqProject
examples/TacticSuggestion/src/: META.TacticSuggestion  dune  main.ml
examples/TacticSuggestion/theories/: Demo.v  Loader.v
registry/: dune  registry.ml  registry.mli
runtime/: registry.ml
src/: build_files.ml  build_files.mli  compiler.ml  compiler.mli  debug.ml  dune  dynamic_prelude.ml  grammar.mlg  grammar.mli  loader.ml  loader.mli  main.ml  main.mli  mltac_plugin.mlpack  module_manager.ml  module_manager.mli  ocamlfind.ml  ocamlfind.mli  preprocessor.ml  preprocessor.mli  preprocessors.ml  preprocessors.mli  runner.ml  runner.mli  scaffold.ml  scaffold.mli  snippet.ml  snippet.mli  tacInTerm.ml  tacInTerm.mli  tactic_in_Ltac.ml  tactic_in_Ltac.mli  tactic_in_Ltac2.ml  tactic_in_Ltac2.mli  tactic_in_term.ml  tactic_in_term.mli  temp_file.ml  temp_file.mli  tempfile.ml  tempfile.mli
src/annotations/: ast_utils.ml  attributes.ml  dune  ppx_camltac_annotations.ml
src/annotations/metadata/: dune
src/api/: dune  hintDb.ml  hintDb.mli  ltac.ml  ltac.mli  ltac2.ml  ltac2.mli  parsing.ml  parsing.mli  prelude.ml  printers.ml  tactics.ml  tactics.mli  term_conversions.ml  term_conversions.mli  terms.ml  terms.mli
src/directives/: build_directives.ml  build_directives.mli  dune  ppx_camltac_directives.ml
src/directives/metadata/: dune  metadata.ml
src/ppx/: dune  extensions.ml  ppx_mltac_main.ml
src/ppx/lib/: dune  ppx_utils.ml  ppx_utils.mli  quasiquotation.mli
src/ppx/runtime/: dune  pattern_matching.mli
src/quot/: dune  extensions.ml
src/quot/lib/: charStream.mli  dune
src/quot/runtime/: dune  parsing.ml  parsing.mli  pattern_matching.ml
src/quoting/: charStream.ml  charStream.mli  dune  extensions.ml  ppx_utils.ml  ppx_utils.mli  quasiquotation.ml  quasiquotation.mli  quotations.ml
src/runtime/: dune  environment.ml  environment.mli  output.ml  output.mli  parsing.ml  parsing.mli  pattern_matching.ml  pattern_matching.mli  registry.ml  registry.mli
tests/: Alerts.v  Backtrack.expected  Backtrack.v  Check.v  Eval.v  InProof.expected  InProof.v  Load.v  Ltac.v  Ltac2.v  MatchGoal.v  Module.v  ModuleLocality1.v  ModuleLocality2.v  Quasiquotes.v  Registry.v  Run.expected  Run.v  TacInTerm.v  dune  test.ml
tests/issues/: Issue5.v
theories/: Camltac.v  Init.v  Ltac2.v  MLtac.v  dune
