(library
 (name camltac_plugin)
 (public_name camltac.plugin)
 (synopsis "OCaml as a Tactic Language")
 (libraries
   dynlink
   camltac.plugin.runtime
   camltac.plugin.api
   camltac.plugin.annotations.metadata
   findlib.dynload
   ppx_rocq.runtime
   sexplib)
  (preprocess (pps ppx_sexp_conv)))

(rocq.pp
 (modules grammar))
