(library
 (name camltac_plugin)
 (public_name camltac.plugin)
 (synopsis "OCaml as a Tactic Language")
 (libraries
   dynlink
   camltac.plugin.runtime
   camltac.plugin.api
   camltac.plugin.annotations.metadata
   findlib
   findlib.dynload
   ppx_rocq.runtime
   sexplib)
  ;; Create a dependency on the "ppx_camltac_annotations" executable
  ;; This is a work-around for https://github.com/ocaml/dune/issues/3499
  (preprocessor_deps %{bin:ppx_camltac_annotations})
  (preprocess (pps ppx_sexp_conv)))

(rocq.pp
 (modules grammar))
