(library
 (name camltac_plugin)
 (public_name camltac.plugin)
 (synopsis "OCaml as a Tactic Language")
 (libraries
   dynlink
   camltac.plugin.runtime
   camltac.plugin.api
   camltac-directives
   rocq-runtime.plugins.ltac
   rocq-runtime.plugins.ltac2
   findlib
   findlib.dynload
   ppx_rocq.runtime))

(rocq.pp
 (modules grammar))
