(include_subdirs qualified)

(rocq.theory
 (name Camltac.Tests)
 (package camltac-tests)
 (plugins camltac.plugin)
 (flags (:standard -require-import-from Corelib Init.Prelude))
 (stdlib no)
 (theories Camltac Corelib Ltac2))

 ;; We cannot declare ML files loaded using "Camltac Load" as dependencies to Dune
 ;; using the "Extra Dependency" command, as it relies on the load path to
 ;; locate files, which is set to a subdirectory of _build. This dummy target is
 ;; thus a work-around that copies all .ml files to Dune's _build to make them available
 ;; to Dune. See also https://rocq-prover.zulipchat.com/#narrow/channel/240550-Dune-devs-.26-users/topic/Extra.20Dependency
 ;; for more discussion.
(rule
 (targets _dummy_target.v) ;; It's important that it's a .v file, so that it runs before the rocq.theory stanza
 (deps (glob_files *.ml) (package camltac))
 (action (write-file _dummy_target.v "")))
