(library
 (name quoting)
 (public_name mltac.plugin.quoting)
 (synopsis "A PPX rewriter for quoting Rocq terms in OCaml")
 (kind ppx_rewriter)
 (modules (:standard \ ppx_mltac))
 (libraries
   mltac.plugin.runtime
   ppx_string ; For string interpolation
   ppxlib)
 (ppx_runtime_libraries mltac.plugin.runtime)
 (preprocess (pps ppxlib.metaquot)))

; Produce an executable that can be depended on by the plugin at runtime
; (in particular, `tests` and `examples` should depend on this executable).
(executable
 (name ppx_mltac)
 (package mltac)
 (public_name ppx-mltac)
 (modules ppx_mltac)
 (libraries mltac.plugin.quoting))
